<resources>
    <string name="app_name">FitAppA</string>
    <string name="createAText">Create Account</string>
    <string name="logTitle">Log In</string>
    <string name="back" />
    <string name="user_name">username</string>
    <string name="user_Name">username</string>
    <string name="welcomeText">Hey,</string>
    <string name="followersNumber">Number</string>
    <string name="followersText">Followers:</string>
    <string name="followingText">Following</string>
    <string name="followingNumber">Number</string>
    <string name="emailText">Email:</string>
    <string name="searchText">Search a Username</string>
    <string name="submit_Search">Submit</string>
    <string name="followButton">Follow!</string>
    <string name="returnHome">Return to my Profile</string>
    <string name="goToWorkout">See your workoutTemplates</string>
    <string name="backButton1">Back and Save</string>
    <string name="backButton">Save and back</string>
    <string name="backButton3">Save and Back</string>
    <string name="weight">weight</string>
    <string name="height">height</string>
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name="NoWorkoutInRoutine">"Sorry, there are no workouts in this routine."</string>
    <string name="StartWorkout">Start</string>
    <string name="weightSetting">Weight is:</string>
    <string name="weightChangeInput">Type to change weight</string>
    <string name="settingButton">Go to Settings</string>
    <string name="heightSetting">height is</string>
    <string name="firstNameSetting">first name is</string>
    <string name="lastNameSetting">last Name Is</string>
    <string name="createRoutine">Create Routine</string>
    <string name="RoutineTitle">Routine Title</string>
    <string name="Save">Save</string>
    <string name="Create">Create</string>
    <string name="AddWorkout">Add Workout To Routine</string>
    <string name="EditWorkout">"Edit "</string>
    <string name="DefaultWorkoutName">Workout Name</string>
    <string name="DefaultExerciseName">Bench Press</string>
    <string name="CreateRoutine">Create A Routine</string>
    <string name="CreateRoutineMsg">Get started by creating a new routine!</string>
    <string name="EndWorkout">End</string>
    <string name="CancelWorkout">Cancel</string>
    <string name="AddSet">+ Add Set</string>
    <string name="Set">Set</string>
    <string name="WeightUnit">lbs</string>
    <string name="NumReps">reps</string>
    <string name="WorkoutObject">WORKOUTOBJ</string>
    <string name="wrong">Almost there, we just need a little more information about you</string>
    <string name="TrackWorkoutNumSet">100</string>
    <string name="TrackWorkoutCategory">200</string>
    <string name="TrackWorkoutUID">300</string>
    <string name="LogoutButton">Logout</string>
    <string name="f_name">First Name</string>
    <string name="l_name">Last Name</string>
    <string name="Height">Height (cm)</string>
    <string name="Weight">Weight (lbs)</string>
    <string name="WorkoutDoneText">Done</string>
    <string name="ExercisesText">Select an exercise!</string>
    <string name="create_exercisetemplate">create exerciseTemplate</string>
    <string name="get_started_by_naming_your_workouttemplate">Get started by naming your workoutTemplate</string>
    <string name="image">Image</string>
    <string name="add_workout">Add Workout</string>
    <string name="start_a_workout">Start A Workout</string>
    <string name="workout_logs">WORKOUT LOGS</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="be_savage_not_average">Be Savage, Not Average</string>
    <string name="sign_up">Sign Up</string>
    <string name="_1">1</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="exercises">Exercises</string>
</resources>