<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/userNameUpdate"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/returnHome"
            android:layout_width="207dp"
            android:layout_height="37dp"
            android:backgroundTint="#112e51"
            android:text="@string/returnHome" />

        <ImageView
            android:id="@+id/imageView19"
            android:layout_width="89dp"
            android:layout_height="83dp"
            app:srcCompat="@drawable/logo" />

        <Button
            android:id="@+id/settingButton"
            android:layout_width="210dp"
            android:layout_height="38dp"
            android:backgroundTint="#046b99"
            android:text="@string/settingButton" />

        <EditText
            android:id="@+id/searchText"
            android:layout_width="272dp"
            android:layout_height="62dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/searchText" />

        <Button
            android:id="@+id/submitSearch"
            android:layout_width="113dp"
            android:layout_height="36dp"
            android:backgroundTint="#046b99"
            android:text="@string/submit_Search"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="21dp" />

        <LinearLayout
            android:layout_height="45dp"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <TextView
                android:text="@string/welcomeText"
                android:id="@+id/textView"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:text="@string/user_Name"
                android:layout_width="wrap_content"
                android:id="@+id/userNameProfile"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        </LinearLayout>

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="204dp"
                    android:layout_height="wrap_content"
                    android:text="@string/followersText"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                <TextView
                    android:id="@+id/followerNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/followersNumber"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
            </LinearLayout>

            <LinearLayout
                android:layout_height="31dp"
                android:layout_width="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="4dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/followingText"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                <TextView
                    android:id="@+id/followingNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/followingNumber"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/followButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#046b99"
                    android:text="@string/followButton"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"></LinearLayout>
    </LinearLayout>
</RelativeLayout>