<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:id="@+id/userNameUpdate">
    <Button
            android:id="@+id/submitSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save Changes" android:backgroundTint="#046b99" android:layout_alignParentStart="true"
            android:layout_marginStart="30dp" android:layout_alignParentBottom="true"
            android:layout_marginBottom="160dp" android:layout_centerHorizontal="true"/>
    <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Go Back" android:backgroundTint="#046b99"
            android:layout_alignParentStart="true"
            android:layout_marginStart="153dp" android:layout_alignParentBottom="true"
            android:layout_marginBottom="86dp" android:layout_centerHorizontal="true"/>
    <EditText
            android:id="@+id/weightChangeInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/weightChangeInput"
            android:inputType="textPersonName" android:layout_alignParentStart="true"
            android:layout_alignParentTop="true" android:layout_marginTop="72dp" android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp" android:layout_marginEnd="138dp"/>
    <TextView
            android:text="@string/weightSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_alignParentStart="true"
            android:layout_marginStart="26dp" android:layout_alignParentTop="true" android:layout_marginTop="46dp"
            android:id="@+id/weightSetting"/>
    <EditText
            android:id="@+id/lastChangeInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/weightChangeInput"
            android:inputType="textPersonName" android:layout_alignParentStart="true"
            android:layout_alignParentTop="true" android:layout_marginTop="340dp" android:layout_alignParentEnd="true"
            android:layout_marginStart="9dp" android:layout_marginEnd="148dp" android:layout_centerVertical="true"/>
    <TextView
            android:text="@string/lastNameSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_alignParentStart="true"
            android:layout_marginStart="15dp" android:layout_alignParentTop="true" android:layout_marginTop="298dp"
            android:id="@+id/lastNameSetting"/>
    <EditText
            android:id="@+id/firstChangeInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/weightChangeInput"
            android:inputType="textPersonName" android:layout_alignParentStart="true"
            android:layout_alignParentTop="true" android:layout_marginTop="234dp" android:layout_alignParentEnd="true"
            android:layout_marginStart="11dp" android:layout_marginEnd="147dp"/>
    <TextView
            android:text="@string/firstNameSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_alignParentStart="true"
            android:layout_marginStart="17dp" android:layout_alignParentTop="true" android:layout_marginTop="201dp"
            android:id="@+id/firstNameSetting"/>
    <EditText
            android:id="@+id/heightChangeInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/weightChangeInput"
            android:inputType="textPersonName" android:layout_alignParentStart="true"
            android:layout_alignParentTop="true" android:layout_marginTop="155dp" android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp" android:layout_marginEnd="148dp"/>
    <TextView
            android:text="@string/heightSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_alignParentStart="true"
            android:layout_marginStart="27dp" android:layout_alignParentTop="true" android:layout_marginTop="130dp"
            android:id="@+id/heightSetting"/>
</RelativeLayout>